practica-piglatin/src/main/java/com/paboomi/backend/antlr/generated/LatinParser.java
// Generated from LatinParser.g4 by ANTLR 4.13.2
package com.paboomi.backend.antlr.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LatinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, PLUS=3, MINUS=4, MULT=5, SPLIT=6, VARIABILES_INIT=7, 
		MUNERA_INIT=8, MAIOR_INIT=9, FINIS_EOF=10, IDENTIC=11, DIFF=12, MAJORTO=13, 
		MINORTO=14, MINOR=15, MAJOR=16, ASSIGN=17, AND=18, OR=19, NOT=20, ADD=21, 
		SUB=22, COLON=23, SEMICOLON=24, COMMA=25, DOT=26, LEFT_CLASP=27, RIGHT_CLASP=28, 
		LEFT_BRACE=29, RIGHT_BRACE=30, LEFT_PAREN=31, RIGHT_PAREN=32, ESTO=33, 
		NUMERUS=34, TEXTUM=35, DECIMALIS=36, BOOL=37, LITTERA=38, VERUM=39, FALSUS=40, 
		SERIES=41, STRUCTURA=42, FINIS=43, SI=44, ALITER=45, DUM=46, FACERE=47, 
		PER=48, PERGE=49, INTERRUMPE=50, ACTIO=51, VARIABILES=52, MUNERA=53, MAIOR=54, 
		RATIO=55, REDDERE=56, LEERE=57, IMPREMERE=58, ID=59, DECIMAL=60, INTEGER=61, 
		STRING=62, CHAR=63, WS=64;
	public static final int
		RULE_program = 0, RULE_globalDeclarations = 1, RULE_globalDeclaration = 2, 
		RULE_functionDefinitions = 3, RULE_mainInstructions = 4, RULE_instruction = 5, 
		RULE_declaration = 6, RULE_arrayDeclaration = 7, RULE_arrayValues = 8, 
		RULE_structDefinition = 9, RULE_structFieldDeclaration = 10, RULE_structLiteral = 11, 
		RULE_structFieldInitializer = 12, RULE_structFieldSeparator = 13, RULE_ifStatement = 14, 
		RULE_elseIfClause = 15, RULE_elseClause = 16, RULE_whileStatement = 17, 
		RULE_doWhileStatement = 18, RULE_forStatement = 19, RULE_jumpStatement = 20, 
		RULE_functionDefinition = 21, RULE_functionBody = 22, RULE_parameter = 23, 
		RULE_parameterList = 24, RULE_argumentList = 25, RULE_returnStatement = 26, 
		RULE_varSection = 27, RULE_forInit = 28, RULE_forCondition = 29, RULE_forUpdate = 30, 
		RULE_block = 31, RULE_arrayCreation = 32, RULE_arrayLiteral = 33, RULE_type = 34, 
		RULE_readStatement = 35, RULE_printStatement = 36, RULE_printItem = 37, 
		RULE_lvalue = 38, RULE_lvalueSufix = 39, RULE_assignment = 40, RULE_expression = 41, 
		RULE_booleanExpression = 42, RULE_booleanOrExpression = 43, RULE_booleanAndExpression = 44, 
		RULE_comparisonExpression = 45, RULE_comparisonOperand = 46, RULE_numericExpression = 47, 
		RULE_additiveExpression = 48, RULE_multiplicativeExpression = 49, RULE_unaryExpression = 50, 
		RULE_addSubExpression = 51, RULE_incrementDecrementLiteral = 52, RULE_multSplitExpression = 53, 
		RULE_plusMinusExpression = 54, RULE_stringExpression = 55, RULE_stringAdditiveExpression = 56, 
		RULE_stringAdditiveItem = 57, RULE_stringPrimary = 58, RULE_primaryNumeric = 59, 
		RULE_numericLiteral = 60, RULE_booleanLiteral = 61, RULE_relationalLiteral = 62, 
		RULE_atributeAccessExpresion = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "globalDeclarations", "globalDeclaration", "functionDefinitions", 
			"mainInstructions", "instruction", "declaration", "arrayDeclaration", 
			"arrayValues", "structDefinition", "structFieldDeclaration", "structLiteral", 
			"structFieldInitializer", "structFieldSeparator", "ifStatement", "elseIfClause", 
			"elseClause", "whileStatement", "doWhileStatement", "forStatement", "jumpStatement", 
			"functionDefinition", "functionBody", "parameter", "parameterList", "argumentList", 
			"returnStatement", "varSection", "forInit", "forCondition", "forUpdate", 
			"block", "arrayCreation", "arrayLiteral", "type", "readStatement", "printStatement", 
			"printItem", "lvalue", "lvalueSufix", "assignment", "expression", "booleanExpression", 
			"booleanOrExpression", "booleanAndExpression", "comparisonExpression", 
			"comparisonOperand", "numericExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "addSubExpression", "incrementDecrementLiteral", "multSplitExpression", 
			"plusMinusExpression", "stringExpression", "stringAdditiveExpression", 
			"stringAdditiveItem", "stringPrimary", "primaryNumeric", "numericLiteral", 
			"booleanLiteral", "relationalLiteral", "atributeAccessExpresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'+'", "'-'", "'*'", "'/'", "'VARIABILES>'", "'MUNERA>'", 
			"'MAIOR>'", "'FINIS'", "'=='", "'!='", "'>='", "'<='", "'<'", "'>'", 
			"'='", "'&&'", "'||'", "'non'", "'++'", "'--'", "':'", "';'", "','", 
			"'.'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'esto'", "'numerus'", 
			"'textum'", "'decimalis'", "'bool'", "'littera'", "'verum'", "'falsus'", 
			"'series'", "'structura'", "'finis'", "'si'", "'aliter'", "'dum'", "'facere'", 
			"'per'", "'perge'", "'interrumpe'", "'actio'", "'VARIABILES'", "'MUNERA'", 
			"'MAIOR'", "'ratio'", "'reddere'", "'<<'", "'>>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "PLUS", "MINUS", "MULT", "SPLIT", 
			"VARIABILES_INIT", "MUNERA_INIT", "MAIOR_INIT", "FINIS_EOF", "IDENTIC", 
			"DIFF", "MAJORTO", "MINORTO", "MINOR", "MAJOR", "ASSIGN", "AND", "OR", 
			"NOT", "ADD", "SUB", "COLON", "SEMICOLON", "COMMA", "DOT", "LEFT_CLASP", 
			"RIGHT_CLASP", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_PAREN", "RIGHT_PAREN", 
			"ESTO", "NUMERUS", "TEXTUM", "DECIMALIS", "BOOL", "LITTERA", "VERUM", 
			"FALSUS", "SERIES", "STRUCTURA", "FINIS", "SI", "ALITER", "DUM", "FACERE", 
			"PER", "PERGE", "INTERRUMPE", "ACTIO", "VARIABILES", "MUNERA", "MAIOR", 
			"RATIO", "REDDERE", "LEERE", "IMPREMERE", "ID", "DECIMAL", "INTEGER", 
			"STRING", "CHAR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LatinParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LatinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIOR_INIT() { return getToken(LatinParser.MAIOR_INIT, 0); }
		public MainInstructionsContext mainInstructions() {
			return getRuleContext(MainInstructionsContext.class,0);
		}
		public TerminalNode FINIS_EOF() { return getToken(LatinParser.FINIS_EOF, 0); }
		public TerminalNode EOF() { return getToken(LatinParser.EOF, 0); }
		public TerminalNode VARIABILES_INIT() { return getToken(LatinParser.VARIABILES_INIT, 0); }
		public GlobalDeclarationsContext globalDeclarations() {
			return getRuleContext(GlobalDeclarationsContext.class,0);
		}
		public TerminalNode MUNERA_INIT() { return getToken(LatinParser.MUNERA_INIT, 0); }
		public FunctionDefinitionsContext functionDefinitions() {
			return getRuleContext(FunctionDefinitionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LatinParser.SEMICOLON, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES_INIT) {
				{
				setState(128);
				match(VARIABILES_INIT);
				setState(129);
				globalDeclarations();
				}
			}

			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUNERA_INIT) {
				{
				setState(132);
				match(MUNERA_INIT);
				setState(133);
				functionDefinitions();
				}
			}

			setState(136);
			match(MAIOR_INIT);
			setState(137);
			mainInstructions();
			setState(138);
			match(FINIS_EOF);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(139);
				match(SEMICOLON);
				}
			}

			setState(142);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDeclarationsContext extends ParserRuleContext {
		public List<GlobalDeclarationContext> globalDeclaration() {
			return getRuleContexts(GlobalDeclarationContext.class);
		}
		public GlobalDeclarationContext globalDeclaration(int i) {
			return getRuleContext(GlobalDeclarationContext.class,i);
		}
		public GlobalDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterGlobalDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitGlobalDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitGlobalDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDeclarationsContext globalDeclarations() throws RecognitionException {
		GlobalDeclarationsContext _localctx = new GlobalDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6605659701248L) != 0)) {
				{
				{
				setState(144);
				globalDeclaration();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDeclarationContext extends ParserRuleContext {
		public GlobalDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDeclaration; }
	 
		public GlobalDeclarationContext() { }
		public void copyFrom(GlobalDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDeclarationArrayDeclarationContext extends GlobalDeclarationContext {
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public GlobalDeclarationArrayDeclarationContext(GlobalDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterGlobalDeclarationArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitGlobalDeclarationArrayDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitGlobalDeclarationArrayDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDeclarationStructDefinitionContext extends GlobalDeclarationContext {
		public StructDefinitionContext structDefinition() {
			return getRuleContext(StructDefinitionContext.class,0);
		}
		public GlobalDeclarationStructDefinitionContext(GlobalDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterGlobalDeclarationStructDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitGlobalDeclarationStructDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitGlobalDeclarationStructDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDeclarationDeclarationContext extends GlobalDeclarationContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public GlobalDeclarationDeclarationContext(GlobalDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterGlobalDeclarationDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitGlobalDeclarationDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitGlobalDeclarationDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDeclarationContext globalDeclaration() throws RecognitionException {
		GlobalDeclarationContext _localctx = new GlobalDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalDeclaration);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESTO:
				_localctx = new GlobalDeclarationDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				declaration();
				}
				break;
			case SERIES:
				_localctx = new GlobalDeclarationArrayDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				arrayDeclaration();
				}
				break;
			case STRUCTURA:
				_localctx = new GlobalDeclarationStructDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				structDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionsContext extends ParserRuleContext {
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public FunctionDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterFunctionDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitFunctionDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitFunctionDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionsContext functionDefinitions() throws RecognitionException {
		FunctionDefinitionsContext _localctx = new FunctionDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ACTIO || _la==RATIO) {
				{
				{
				setState(155);
				functionDefinition();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainInstructionsContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public MainInstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainInstructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).enterMainInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatinParserListener ) ((LatinParserListener)listener).exitMainInstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinParserVisitor ) return ((LatinParserVisitor<? extends T>)visitor).visitMainInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainInstructionsContext mainInstructions() throws RecognitionException {
		MainInstructionsContext _localctx = new MainInstructionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainInstructions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -213971574323150824L) != 0)) {
				{
				{
				setState(161);
				instruction();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
